--- a/src/Tools/jEdit/src/jEdit.props
+++ b/src/Tools/jEdit/src/jEdit.props
@@ -185,6 +185,7 @@ foldPainter=Circle
 home.shortcut=
 insert-newline-indent.shortcut=
 insert-newline.shortcut=ENTER
+isabelle-debugger.dock-position=floating
 isabelle-documentation.dock-position=right
 isabelle-output.dock-position=bottom
 isabelle-output.height=174
