--- a/Admin/polyml/build
+++ b/Admin/polyml/build
@@ -64,7 +64,7 @@ case "$TARGET" in
     OPTIONS=()
     ;;
   x86-windows)
-    OPTIONS=(--host=i686-w32-mingw32)
+    OPTIONS=(--host=i686-w32-mingw32 CPPFLAGS='-I/mingw32/include')
     PATH="/mingw32/bin:$PATH"
     ;;
   x86_64-windows)
@@ -96,9 +96,9 @@ case "$TARGET" in
     peflags -x8192000 -z500 "$TARGET/poly.exe"
     ;;
   x86-windows)
-    cp /mingw32/bin/libgcc_s_dw2-1.dll \
-      /mingw32/bin/libwinpthread-1.dll \
-      /mingw32/bin/libstdc++-6.dll \
-      "$TARGET/."
+    for X in libgcc_s_dw2-1.dll libgmp-10.dll libstdc++-6.dll libwinpthread-1.dll
+    do
+      cp "/mingw32/bin/$X" "$TARGET/."
+    done
     ;;
 esac
