--- a/Admin/polyml/build
+++ b/Admin/polyml/build
@@ -64,7 +64,7 @@ case "$TARGET" in
     OPTIONS=()
     ;;
   x86-windows)
-    OPTIONS=(--host=i686-w32-mingw32 CPPFLAGS='-I/mingw32/include')
+    OPTIONS=(--host=i686-w32-mingw32 CPPFLAGS='-I/mingw32/include')  # --build=i686-pc-msys --with-gmp
     PATH="/mingw32/bin:$PATH"
     ;;
   x86_64-windows)
