--- a/Admin/polyml/build
+++ b/Admin/polyml/build
@@ -96,7 +96,7 @@ case "$TARGET" in
     peflags -x8192000 -z500 "$TARGET/poly.exe"
     ;;
   x86-windows)
-    for X in libgcc_s_dw2-1.dll libgmp-10.dll libstdc++-6.dll libwinpthread-1.dll
+    for X in libgcc_s_dw2-1.dll libgmp-10.dll libstdc++-6.dll
     do
       cp "/mingw32/bin/$X" "$TARGET/."
     done
